<resources>
    <string name="app_name">CountriesREST</string>
    <string name="app_title">Countries</string>
    <string name="communication_error">Error in getting data. Please try again later.</string>
    <string name="no_countries">Oops! No result found.</string>
    <string name="error_data">Something went wrong! Please try again later.</string>
    <string name="done">Done</string>
    <string name="iv_flag_description">Hold flag image</string>
    <string name="tv_languages_title">Languages</string>

    <string name="tv_details">Details</string>
    <string name="tv_native_name">Native name</string>
    <string name="tv_capital">Capital</string>
    <string name="tv_numeric_code">Numeric code</string>
    <string name="tv_region">Region</string>
    <string name="tv_population">Population</string>
</resources>
