<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorViewBg"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_country_detail"
    tools:context=".country_detail.CountryDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_country_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_album_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_details"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/detail_title_size"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_native_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_native_name"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_native_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_capital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_capital"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_capital_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_numeric_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_numeric_code"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_numeric_code_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_region"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_region_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_population"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_population"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/tv_population_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:textSize="@dimen/details_size"
                    android:typeface="sans" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_album_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_languages_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="12"
                    android:text="@string/tv_languages_title"
                    android:textColor="@color/colorTitle"
                    android:textSize="@dimen/detail_title_size"
                    android:textStyle="bold"
                    android:typeface="sans"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_languages_title">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_languages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

                    <ProgressBar
                        android:id="@+id/pb_languages_loading"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>